# deka

./: .gitignore  .travis.yml  CabalCommon.hs  ChangeLog  README  README.md  build-hsc  configure.ac  current-versions.txt  deka.cabal  deka.cabal.old  dimes.cabal  gencabal.hs  ghc-bug.hs  hackage-upload-docs.sh  minimum-versions.txt  mkDecNumber.hs  mkQuadTests.hs  mptest.c  printcabal.hs  sunlight-test.hs  upload-docs
decnumber/: Krah-fixes.txt  LICENSE  README  configure.ac
decnumber/src/: decContext.h  decNumber.c  decNumberLocal.h.in  decNumberMacros.c  decNumberMacros.h
dectest/: AllModules.hs  Arity.hs  Conditions.hs  Directives.hs  NumTests.hs  Operand.hs  Queue.hs  Result.hs  Runner.hs  Specials.hs  TestHelpers.hs  Types.hs  Util.hs  dectest.c  dectest.hs
dectest/Parse/: Tokenizer.hs
lib/: Deka.hs
lib/Data/: Deka.hs
lib/Data/Deka/: Class.hs  Context.hs  DecNum.hs  Decnumber.hsc  Digit.hs  Docs.hs  Env.hs  Examples.hs  Examples.lhs  IO.hs  Internal.hs  Mpdecimal.hsc  Pure.hs  Quad.hs  Safe.hs
lib/Data/Dimes/: Base.hs  Base.hsc  Context.hs  Internal.chs  Internal.chs.h  Internal.hs  Pure.hs  Safe.hs  Trapped.hs
lib/Deka/: Abstract.hs  Class.hs  Classes.hs  Context.hs  Dec.hs  DecNum.hs  Decnumber.hsc  Decoded.hs  Digit.hs  Docs.hs  Fixed.hs  Interface.hs  Internal.hs  Native.hs  Quad.hs  Unsafe.hs
lib/Deka/Class/: Internal.hs
lib/Deka/Context/: Internal.hs
lib/Deka/Dec/: Decoding.hs
lib/Deka/DecNum/: Ctx.hs  CtxFree.hs  DecNum.hs  Internal.hs  Safe.hs  Util.hs
lib/Deka/Decnumber/: Context.hsc  DecNumber.hsc  DecQuad.hsc  Types.hsc
lib/Deka/Docs/: Examples.lhs
lib/Deka/Fixed/: Double.hs  Quad.hs  Single.hs
lib/Deka/Internal/: Class.hs  Context.hs  Decoding.hs  Unsafe.hs  mkmpd.hs  mpdecimports.hs
lib/Deka/Native/: Abstract.hs
lib/Deka/Quad/: Ctx.hs  CtxFree.hs  Decoding.hs  Internal.hs  Quad.hs  (+1 more)
native/: Properties.hs  native.hs
test/: DataDir.hs  DekaDir.hs  DekaTest.hs  deka-tests.hs  tasty-test.hs
test/DataDir/: Deka.hs  DekaDir.hs  DekaTest.hs
test/DekaDir/: DecNumTest.hs  QuadTest.hs
tests/: .gitignore  AllModules.hs  Dectest.hs  Util.hs  cabal.sandbox.config  current-versions.txt  decnumber-tests.hs  deka-tests.cabal  genCabal.hs  generate  immutability.hs  listLookups.hs  minimum-versions.txt  tasty-test.hs  testParse.hs
tests/Dectest/: Binary.hs  Log.hs  Lookup.hs  Parse.hs  Runner.hs  Util.hs
tests/dectest/: Directives.hs  Parse.hs  TestHelpers.hs  TestLog.hs  Types.hs  Util.hs  dectest.hs
tests/native/: AllModules.hs  Decrees.hs  Generators.hs  Properties.hs  deka-native.hs
(+104 files in other folders)
