AC_INIT([libdecnumber], [368-4], [omari@smileystation.com])
AC_C_BIGENDIAN( [AC_SUBST([LITEND], [0])], [AC_SUBST([LITEND], [1])]
                , AC_MSG_ERROR([Cannot determine endianness])
                , AC_MSG_ERROR([Cannot determine endianness]) )
AC_CONFIG_FILES([decnumber/src/decNumberLocal.h])
AC_OUTPUT
