name:                deka
version:             0.6.0.0
synopsis:            Decimal floating point arithmetic

description:
  deka provides decimal floating point arithmetic.  It
  is based on the decNumber C library, which is available
  at
  .
  <http://speleotrove.com/decimal/decnumber.html>
  .
  decNumber, in turn, implements the General Decimal Arithmetic
  Specification, which is available at
  .
  <http://speleotrove.com/decimal/>
  .
  For more on deka, please see the Github home page at
  .
  <https://github.com/massysett/deka>

homepage:            http://www.github.com/massysett/deka
license:             BSD3
license-file:        LICENSE
author:              Omari Norman
maintainer:          omari@smileystation.com
copyright:           2014 Omari Norman
category:            Math
build-type:          Simple
extra-source-files:  README.md ChangeLog
  current-versions.txt minimum-versions.txt
cabal-version:       >=1.10
tested-with: GHC==7.4.1 GHC==7.6.3, GHC ==7.8.2

library
  hs-source-dirs: lib
  
  exposed-modules:     
      Deka
    , Deka.Class
    , Deka.Context
    , Deka.DecNum
    , Deka.Decoded
    , Deka.Docs
    , Deka.Docs.Examples

  other-modules:
      Deka.Internal
    , Deka.Internal.Class
    , Deka.Internal.Context
    , Deka.Internal.DecNum.CtxFree
    , Deka.Internal.DecNum.Ctx
    , Deka.Internal.DecNum.DecNum
    , Deka.Internal.DecNum.Util
    , Deka.Internal.Decnumber.Context
    , Deka.Internal.Decnumber.DecNumber
    , Deka.Internal.Unsafe

  build-depends:
      base >=4.5.0.0 && < 4.8
    , bytestring >=0.9.2.1 && < 0.11

  ghc-options: -Wall
  default-language:    Haskell2010

  c-sources:
    decnumber/src/decContext.c
    decnumber/src/decNumberMacros.c
    decnumber/src/decNumber.c
  include-dirs:
    decnumber/src
